--- a/src/client/GalleryPixels.UI/wwwroot/index.html
+++ b/src/client/GalleryPixels.UI/wwwroot/index.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:wire="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8"/>
     <title>GalleryPixels.UI</title>
     <base href="/"/>
-    <link href="css/app.css" rel="stylesheet"/>
+    <link href="css/site.min.css" rel="stylesheet"/>
 
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="GalleryPixels.UI.styles.css" rel="stylesheet" /> -->
 </head>
 
-<body>
-<div id="app">Loading...</div>
+<body class="leading-normal tracking-normal text-gray-900 font-helvetica">
+<h1 class="hidden">Best tab border issue fix!</h1>
+<div id="app">
+    <div class="fixed top-0 left-0 right-0 bottom-0 w-full h-screen z-50 overflow-hidden bg-gray-100 opacity-75 flex flex-col items-center justify-center"
+         wire:loading>
+        <div class="loader p-5 rounded-full flex space-x-3">
+            <div class="w-5 h-5 bg-gray-800 rounded-full animate-bounce"></div>
+            <div class="w-5 h-5 bg-gray-800 rounded-full animate-bounce"></div>
+            <div class="w-5 h-5 bg-gray-800 rounded-full animate-bounce"></div>
+        </div>
+        <h2 class="text-center text-black text-xl font-semibold mt-8">Loading...</h2>
+        <p class="w-1/3 text-center text-black">This may take a few seconds, please don't close this page.</p>
+    </div>
+</div>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
+    <a class="reload" href="">Reload</a>
     <a class="dismiss">🗙</a>
 </div>
 
