Full code cleanup

--- a/src/client/GalleryPixels.UI/wwwroot/index.html
+++ b/src/client/GalleryPixels.UI/wwwroot/index.html
@@ -10,9 +10,9 @@
     <link href="css/site.min.css" rel="stylesheet"/>
 
     <!-- JS-->
-    <script src="js/scripts.js" defer></script>
-    <script src="js/lazysizes.min.js" defer></script>
-    <script src="js/magic-grid.min.js" defer></script>
+    <script defer src="js/scripts.js"></script>
+    <script defer src="js/lazysizes.min.js"></script>
+    <script defer src="js/magic-grid.min.js"></script>
 
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="GalleryPixels.UI.styles.css" rel="stylesheet" /> -->
